packages/typ/tests/fixtures/diagnostics/0048_core_holder_payload_mismatch_04.ml.expected
File "0048_core_holder_payload_mismatch_04.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0048_core_holder_payload_mismatch_04 is not a valid module name.

File "0048_core_holder_payload_mismatch_04.ml", line 2, characters 28-32:
2 | let _ : int holder = Holder true
                                ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
